[package]
name = "neptune-mempool"
description = "Neptune transaction mempool: the Mempool store, its transaction-id and upgrade-priority abstractions, and the proof-quality policy used for gossip and replacement"
authors = ["Triton Software"]
version = "0.12.0"
edition = "2024"
license = "Apache-2.0"

homepage = "https://neptune.cash/"
repository = "https://github.com/Neptune-Crypto/neptune-core/"

[features]
# implements arbitrary::Arbitrary for various types
arbitrary-impls = [
    "dep:arbitrary",
    "dep:proptest",
    "dep:proptest-arbitrary-interop",
    "neptune-consensus/arbitrary-impls",
    "neptune-mutator-set/arbitrary-impls",
    "neptune-primitives/arbitrary-impls",
]

# exposes test-support surface (the gated `Mempool` accessors/mutators) needed
# by downstream crates' tests. off by default.
test-helpers = ["arbitrary-impls", "dep:bincode"]

# implements `StandardUniform: Distribution<TransactionKernelId>` so the RPC
# interface can be mocked on the client side.
mock-rpc = ["dep:rand"]

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
arbitrary = { version = "1.4.1", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }
bytesize = "1.3"
get-size2 = { version = "0.7", features = ["derive"] }
itertools = "0.14"
neptune-consensus = { version = "0.12.0", path = "../neptune-consensus" }
neptune-mutator-set = { version = "0.12.0", path = "../neptune-mutator-set" }
neptune-primitives = { version = "0.12.0", path = "../neptune-primitives" }
neptune-rpc-api = { version = "0.12.0", path = "../neptune-rpc/api" }
num-rational = "0.4"
# optional: required by the mock-rpc feature's Distribution impl.
# duplicated (non-optional) in [dev-dependencies] for this crate's own tests.
rand = { version = "0.9", optional = true }
num-traits = "0.2"
priority-queue = "1.4"
proptest = { version = "1.7", optional = true }
proptest-arbitrary-interop = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27.0", features = ["derive"] }
tasm-lib = "7.0.0"
tracing = "0.1"

[dev-dependencies]
num-bigint = { version = "0.4", features = ["serde"] }
bincode = "1.3"
macro_rules_attr = "0.1.3"
neptune-consensus = { version = "0.12.0", path = "../neptune-consensus", features = ["test-helpers"] }
neptune-mempool = { path = ".", features = ["test-helpers"] }
neptune-mutator-set = { version = "0.12.0", path = "../neptune-mutator-set", features = ["test-helpers"] }
neptune-primitives = { version = "0.12.0", path = "../neptune-primitives", features = ["test-helpers"] }
proptest = "1.7"
proptest-arbitrary-interop = "0.1"
rand = "0.9"
test-strategy = "0.3"
tokio = { version = "1.47", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tracing-test = "0.2"

[lints]
workspace = true
