[package]
name = "neptune-mutator-set"
description = "The mutator set, a privacy-preserving cryptographic accumulator invented by the Neptune team. Paper: https://eprint.iacr.org/2023/1208 Article: https://neptune.cash/articles/mutator-sets"
authors = ["Triton Software"]

version = "0.12.0"
edition = "2021"
license = "Apache-2.0"

homepage = "https://neptune.cash/"
repository = "https://github.com/Neptune-Crypto/neptune-core/"

[features]
# implements arbitrary::Arbitrary for various types
arbitrary-impls = ["dep:arbitrary", "dep:proptest", "dep:proptest-arbitrary-interop"]

# exposes proptest strategies (`strategies`) and mock constructors
# (`test_shared`) needed by downstream crates' tests. off by default.
test-helpers = ["arbitrary-impls", "dep:rand"]

[dependencies]
neptune-archival-mmr = { version = "0.12.0", path = "../neptune-archival-mmr" }
neptune-database = { version = "0.12.0", path = "../neptune-database" }
get-size2 = { version = "0.7", features = ["derive"] }
itertools = "0.14"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_arrays = "0.2"
tasm-lib = "7.0.0"
thiserror = "1.0.65"

# optional: required for unit tests and the arbitrary-impls / test-helpers features.
# duplicated (non-optional) in [dev-dependencies] for this crate's own tests.
arbitrary = { version = "1.4.1", features = ["derive"], optional = true }
proptest = { version = "1.7", optional = true }
proptest-arbitrary-interop = { version = "0.1", optional = true }
rand = { version = "0.9", optional = true }

[dev-dependencies]
# the crate's own tests use archival-mmr's `mock` constructors.
neptune-archival-mmr = { version = "0.12.0", path = "../neptune-archival-mmr", features = ["test-helpers"] }
arbitrary = { version = "1.4.1", features = ["derive"] }
bincode = "1.3"
macro_rules_attr = "0.1.3"
proptest = "1.7"
proptest-arbitrary-interop = "0.1"
rand = "0.9"
serde_json = "1.0"
statrs = "0.18.0"
strum = { version = "0.27.0", features = ["derive"] }
test-strategy = "0.3"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
