[package]
name = "neptune-p2p"
description = "Neptune peer-to-peer protocol types: the PeerMessage wire enum, handshake/transfer payloads, peer identity and standing, and sync-challenge types"
authors = ["Triton Software"]
version = "0.12.0"
edition = "2024"
license = "Apache-2.0"

homepage = "https://neptune.cash/"
repository = "https://github.com/Neptune-Crypto/neptune-core/"

[features]
# implements arbitrary::Arbitrary for various types
arbitrary-impls = [
    "dep:arbitrary",
    "dep:proptest",
    "dep:proptest-arbitrary-interop",
    "neptune-consensus/arbitrary-impls",
    "neptune-mempool/arbitrary-impls",
    "neptune-primitives/arbitrary-impls",
]

# exposes test-support constructors (e.g. `PeerStanding::init`) needed by
# downstream crates' tests. off by default.
test-helpers = ["arbitrary-impls"]

# implements `StandardUniform: Distribution<T>` for peer sanction/standing types
# so the RPC interface can be mocked on the client side.
mock-rpc = []

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
arbitrary = { version = "1.4.1", features = ["derive"], optional = true }
arraystring = { version = "0.3.0", features = ["serde-traits"] }
itertools = "0.14"
libp2p-identity = "0.2.14"
multiaddr = "0.18.2"
multihash = "0.19.5"
neptune-consensus = { version = "0.12.0", path = "../neptune-consensus" }
neptune-mempool = { version = "0.12.0", path = "../neptune-mempool" }
neptune-primitives = { version = "0.12.0", path = "../neptune-primitives" }
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
proptest = { version = "1.7", optional = true }
proptest-arbitrary-interop = { version = "0.1", optional = true }
rand = "0.9"
semver = "^1.0.23"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.9"
strum = { version = "0.27.0", features = ["derive"] }
tasm-lib = "7.0.0"
thiserror = "1.0.65"
tracing = "0.1"

[dev-dependencies]
macro_rules_attr = "0.1.3"
neptune-consensus = { version = "0.12.0", path = "../neptune-consensus", features = ["test-helpers"] }
neptune-p2p = { path = ".", features = ["arbitrary-impls"] }
proptest = "1.7"
proptest-arbitrary-interop = "0.1"
test-strategy = "0.3"
tracing-test = "0.2"

[lints]
workspace = true
