[package]
name = "neptune-primitives"
description = "Foundational primitives (Timestamp, MastHash) shared across neptune-cash"
authors = ["Triton Software"]

version = "0.12.0"
edition = "2021"
license = "Apache-2.0"

homepage = "https://neptune.cash/"
repository = "https://github.com/Neptune-Crypto/neptune-core/"

[features]
# implements arbitrary::Arbitrary (and proptest strategies) for various types
arbitrary-impls = ["dep:arbitrary", "dep:proptest", "dep:proptest-arbitrary-interop"]

[dependencies]
chrono = "0.4"
get-size2 = { version = "0.7", features = ["derive"] }
itertools = "0.14"
num-traits = "0.2"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27.0", features = ["derive"] }
tasm-lib = "7.0.0"

# optional: required for unit tests and the arbitrary-impls feature.
# duplicated (non-optional) in [dev-dependencies] for this crate's own tests.
arbitrary = { version = "1.4.1", features = ["derive"], optional = true }
proptest = { version = "1.7", optional = true }
proptest-arbitrary-interop = { version = "0.1", optional = true }

[dev-dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
proptest = "1.7"
proptest-arbitrary-interop = "0.1"
test-strategy = "0.3"

[lints]
workspace = true
