[package]
name = "neptune-wallet"
description = "Wallet functionality (keys, addresses, transaction construction) for Neptune Cash."
authors = ["Triton Software"]

version = "0.12.0"
edition = "2021"
license = "Apache-2.0"

[features]

# implements arbitrary::Arbitrary for various types
arbitrary-impls = [
    "dep:arbitrary",
    "dep:proptest",
    "dep:proptest-arbitrary-interop",
    "neptune-consensus/arbitrary-impls",
    "neptune-mutator-set/arbitrary-impls",
    "neptune-primitives/arbitrary-impls",
]

# exposes test-support constructors (e.g. WalletEntropy::new_random and the
# nth_*_for_tests key derivations) needed by downstream crates' tests.
test-helpers = ["arbitrary-impls"]

[dependencies]

# note: arbitrary, proptest, proptest-arbitrary-interop are duplicated in
# [dev-dependencies] because they are optional deps but required for unit tests.
# please ensure versions match in both sections.

aead = { version = "0.5", features = ["std"] }
aes-gcm = "0.10"
anyhow = { version = "1.0", features = ["backtrace"] }
arbitrary = { version = "1.4.1", features = ["derive"], optional = true }
bech32 = ">=0.9, <0.10"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
k256 = { version = "0.13", features = ["serde", "ecdsa", "ecdh"] }
get-size2 = { version = "0.7", features = ["derive"] }
itertools = "0.14"
num-traits = "0.2"
proptest = { version = "1.7", optional = true }
proptest-arbitrary-interop = { version = "0.1", optional = true }
rand = "0.9"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha3 = "0.10.8"
strum = { version = "0.27.0", features = ["derive"] }
tasm-lib = "7.0.0"
thiserror = "1.0.65"
tiny-bip39 = "1.0"
tracing = "0.1"
zeroize = "1.8.1"

neptune-consensus = { version = "0.12.0", path = "../neptune-consensus" }
neptune-mutator-set = { version = "0.12.0", path = "../neptune-mutator-set" }
neptune-primitives = { version = "0.12.0", path = "../neptune-primitives" }

[dev-dependencies]

# Unit tests in this crate need the optional arbitrary/proptest impls. Referencing
# this crate with the `arbitrary-impls` feature causes feature unification to turn
# those on for the crate-under-test (and its neptune-consensus/-primitives deps)
# when running `cargo test`.
neptune-wallet = { path = ".", features = ["arbitrary-impls"] }

# enables neptune-consensus's test-support constructors (e.g. make_mock_transaction).
neptune-consensus = { version = "0.12.0", path = "../neptune-consensus", features = ["test-helpers"] }

# note: arbitrary, proptest, proptest-arbitrary-interop are duplicated in
# [dev-dependencies] because they are optional deps but required for unit tests.
# please ensure versions match in both sections.

arbitrary = { version = "1.4.1", features = ["derive"] }
proptest = "1.7"
proptest-arbitrary-interop = "0.1"
test-strategy = "0.3"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
