[package]
name = "neptune-rpc-api"
description = "Neptune JSON-RPC API contract: the RpcApi trait and its data-transfer model types"
authors = ["Triton Software"]
version = "0.14.2"
edition = "2024"
license = "Apache-2.0"

repository = "https://github.com/Neptune-Crypto/neptune-core/"

[features]
# exposes test-support helpers (e.g. RpcBlockTemplateMetadata::solve) and
# test-only trait impls needed by downstream crates' tests.
test-helpers = []

[dependencies]
async-trait = "0.1.83"
hex = "0.4.3"
multiaddr = "0.18.2"
neptune-consensus = { version = "0.14.2", path = "../../neptune-consensus" }
neptune-mutator-set = { version = "0.14.2", path = "../../neptune-mutator-set" }
neptune-primitives = { version = "0.14.2", path = "../../neptune-primitives" }
neptune-rpc-macros = { version = "0.14.2", path = "../macros" }
neptune-wallet = { version = "0.14.2", path = "../../neptune-wallet" }
num-bigint = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_arrays = "0.2"
serde_json = "1.0"
serde_tuple = "1.1.3"
strum = { version = "0.27.0", features = ["derive"] }
tasm-lib = "7.0.0"
thiserror = "1.0.65"

[dev-dependencies]
macro_rules_attr = "0.1.3"
neptune-consensus = { version = "0.14.2", path = "../../neptune-consensus", features = [
    "test-helpers",
] }
neptune-mutator-set = { version = "0.14.2", path = "../../neptune-mutator-set", features = [
    "arbitrary-impls",
] }
proptest = "1.7"
proptest-arbitrary-interop = "0.1"
test-strategy = "0.3"

[lints]
workspace = true
