[package]
name = "neptune-rpc-client"
description = "library for interacting with neptune-cash's JSON-RPC"
authors = ["Triton Software"]
version = "0.12.0"
edition = "2024"
license = "Apache-2.0"

repository = "https://github.com/Neptune-Crypto/neptune-core/"

[dependencies]
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "default-tls",
    "system-proxy",
] }
serde_json = "1.0"
neptune-cash = { version = "0.12.0", path = "../../neptune-core" }
neptune-consensus = { version = "0.12.0", path = "../../neptune-consensus" }
async-trait = "0.1.83"

[dev-dependencies]
itertools = "0.14"
num-traits = "0.2"
rand = "0.9"
strum = { version = "0.27.0" }
tokio = { version = "1.47", features = ["fs", "io-util", "sync", "macros", "time", "tracing"] }

[lints]
workspace = true
