[package]
name = "neptune-rpc-macros"
description = "Macros for Neptune RPC"
version = "0.6.1"
edition = "2024"
license = "Apache-2.0"

repository = "https://github.com/Neptune-Crypto/neptune-core/"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.8.0"
quote = "1.0.40"
syn = { version = "2.0.106", features = ["full"] }

[lints]
workspace = true
